vlib/v/checker/tests/for_in_key_redefinition.vv
arr := [1,2,3]
value := 2

for value, _ in arr {
	println(value)
}
